# aura-ai

./: .gitignore  README.md  config.yaml  pyproject.toml  test_quick.py
aura/: .gitignore
aura-ai/: README.md
aura-ai/src/aura/: db.py  doctor.py
aura-ai/src/aura/features/: tools.py
aura-ai/src/aura_ai.egg-info/: PKG-INFO  SOURCES.txt
aura/src/aura/: __main__.py  app.py  config.py  identity.py  identity_paths.py  migrator.py  updater.py  wizard.py
aura/src/aura/features/: chat.py  memory.py  memory_extractor.py  summarizer.py  vector_memory.py  web_search.py
aura/src/aura/tools/: intent.py  registry.py
aura/src/aura/tools/browser/: detect.py  enrich.py  execute.py  intent.py  open.py
aura/src/aura_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/aura/: embeddings.py  identity_lock.py  models.py  ollama_utils.py
src/aura/features/: chat.py  user_memory.py
src/aura/tools/: registry.py
src/aura/tools/browser/: detect.py  executor.py  intent.py
